[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "draw-matrix"
description = "Tools to draw matrix"
readme = "README.md"
version = "0.1.1"

[project.scripts]
draw-matrix = "draw_matrix.main:main"

[tool.setuptools]
packages = ["draw_matrix"]



[tool.pytest.ini_options]
testpaths = [
    "tests",
]
norecursedirs = [
    "deps"
]
